--- a/package.json
+++ b/package.json
@@ -1,16 +1,52 @@
 {
-  "name": "react-dark-mode-toggle",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@gozenc/react-dark-mode-toggle",
+  "version": "0.0.1",
+  "description": "A beautiful, animated React dark mode toggle component with zero dependencies",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "dev": "cd dev && vite",
+    "build": "tsc && vite build",
+    "build:dev": "cd dev && vite build",
+    "lint": "eslint src --ext ts,tsx",
+    "test": "node test-package.js",
+    "prepublishOnly": "npm run build"
+  },
+  "keywords": [
+    "react",
+    "dark-mode",
+    "toggle",
+    "theme",
+    "component",
+    "ui",
+    "animation"
+  ],
+  "author": "gozenc",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gozenc/react-dark-mode-toggle.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gozenc/react-dark-mode-toggle/issues"
+  },
+  "homepage": "https://github.com/gozenc/react-dark-mode-toggle#readme",
   "peerDependencies": {
-    "react": "^19.1.1"
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -22,8 +58,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-dts": "^4.3.0"
   }
 }
