--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gozenc/react-dark-mode-toggle",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A beautiful, animated React dark mode toggle component with zero dependencies",
   "type": "module",
   "main": "./dist/index.js",
@@ -27,6 +27,7 @@
     "test": "node scripts/test-package.js",
     "test:local": "node scripts/test-local.js",
     "test:browser": "node scripts/test-browser.js",
+    "bump": "node scripts/bump-version.js",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
