--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gozenc/react-dark-mode-toggle",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A beautiful, animated React dark mode toggle component with zero dependencies",
   "type": "module",
   "main": "./dist/index.js",
@@ -62,7 +62,7 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react-swc": "^4.2.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
